k8s deployments/airports-assembly-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: airports-assembly
spec: {}
status: {
