k8s deployments/countries-assembly-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: countries-assembly
spec: {}
status: {}
