k8s deployments/countries.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: countries-assembly
  name: countries-assembly
spec:
  replicas: 3
  selector:
    matchLabels:
      run: countries-assembly
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: countries-assembly
    spec:
      containers:
      - image: sivajey/countries-assembly
        name: countries-assembly
        ports:
        - containerPort: 8080
        livenessProbe:
         httpGet:
          path: /health/live
          port: 8080
         initialDelaySeconds: 10
         periodSeconds: 10
        readinessProbe:
         httpGet:
          path: /health/ready
          port: 8080
         initialDelaySeconds: 10
         periodSeconds: 10
        resources: {}
status: {}
