k8s deployments/airports-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: airports-assembly
  name: airports-assembly
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: airports-assembly
  type: LoadBalancer
status:
  loadBalancer: {}
