k8s deployments/countries-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: countries-assembly
  name: countries-assembly
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    run: countries-assembly
  type: LoadBalancer
status:
  loadBalancer: {}
