k8s deployments/airports-np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-airports # pick a name
spec:
  podSelector:
    matchLabels:
      run: airports-assembly # selector for the pods
  ingress: # allow ingress traffic
  - from:
    - podSelector: # from pods
        matchLabels: # with this label
          access: 'airports' # 'true' *needs* quotes in YAML, apparently
