k8s deployments/countries-np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-countries # pick a name
spec:
  podSelector:
    matchLabels:
      run: countries-assembly # selector for the pods
  ingress: # allow ingress traffic
  - from:
    - podSelector: # from pods
        matchLabels: # with this label
          access: 'countries' #  *needs* quotes in YAML, apparently
